<resources>
    <string name="app_name">Redeemar</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_help</item>
        <item>@string/nav_item_about</item>
        <item>@string/nav_item_contact</item>
        <item>@string/nav_item_rate</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_rate</item>
        <item>@drawable/ic_contact</item>
        <item>@drawable/ic_logout</item>
    </string-array>
    <string name="nav_item_offers">All Offers</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_rate">Rate Us</string>
    <string name="nav_item_contact">Contact</string>
    <string name="nav_item_signin">Sign In</string>
    <string name="nav_item_signout">Sign Out</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_messages">Messages</string>
    <string name="app_description">Redeemar Sample Applications</string>
    <string name="default_font">MyriadProRegular.otf</string>
    <string name="default_font_bold">MyriadProBold.otf</string>
    <string name="facebook_app_id">1704091646584541</string>
    <string name="button_start">Start Scanning</string>
    <string name="activities_list_title_string">Redeemar Samples</string>
    <string name="activities_list_empty">No activities</string>
    <string name="button_OK">OK</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>
    <string name="offer_not_found">This offer is not available for redemption now.</string>
    <string name="error_validation_wrong_place">You cannot validate this offer from here. Please select the offer from banked offer list and then tap Validate button.</string>
    <string name="error_offer_expired">You are scannaing an image not associated this offer or the offer has reached max redemption limit.</string>
    <string name="error_wrong_target">You are scannaing an image not associated with validation.</string>
    <string name="error_duplicate_validation">You have already redeemded this offer.</string>
    <string name="error_validation_failure">Failed to redeem the offer.</string>
    <string name="error_validation_success">You have successfully redeemded the offer.</string>
    <string name="error_cgi_animation">You have successfully redeemded the offer.</string>
    <string name="error_validation_wrong_redeemar">Unable to get redeemer details.</string>
    <string name="failed">Failed to complete this process.</string>
    <string name="redemption_code_mismatch">You have entered a wrong redemption code.</string>
    <string name="cgi_animation">This will display a CGI animation. Coming soon.</string>
    <string name="coming_soon">This will display a CGI animation. Coming soon.</string>
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    <string name="menu_back">Redeemar Samples</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
    <string name="splash_screen_description">Redeemar Splash</string>
    <string name="success">Success!</string>
    <string name="error">Oops!</string>
    <string name="looking_for_offers">Looking for some offers for this brand...</string>
    <string name="unique_target_id">Unique Target Id:</string>
    <string name="valid_logo_scanned">You have successfully scanned and recognized a redeemar logo</string>
    <string name="invalid_logo_scanned">We have failed to find a redeemar logo</string>
    <string name="crashed">Crashed!</string>
    <string name="senderror">Send Error</string>
    <string name="brand_name">Loading brand information...</string>
    <string name="brand">Brand</string>
    <string name="brand_description">We appreciate our customers for their loyalty and past patronage</string>
    <string name="shop_offers">Shop Offers</string>
    <string name="continue_to_browse">Continue</string>
    <string name="scan_again">Scan Again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crash_toast_text">App Crashed !!! Report has been sent to developer</string>
    <string name="crash_dialog_title">Alert</string>
    <string name="crash_dialog_text">OOPS!!!An unexpected error</string>
    <string name="crash_dialog_comment_prompt">Comments</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="crash_user_email_label"></string>
    <string name="nav_drawer_recently_added">Recently Added</string>
    <string name="toast_saved">Wallpapaer saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpapaer updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="splash_error">Unable to download wallpapers. Verify your google\'s user name in settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="price_range_id">$$$</string>
    <string name="expires">Expire in</string>
    <string name="discount">Discount</string>
    <string name="bank_it">BANK OFFER</string>
    <string name="pass_it">PASS</string>
    <string name="offer_title">Offer description...</string>
    <string name="redeemar">Redeemar</string>
    <string name="join_our_community">JOIN OUR GLOBAL COMMUNITY AND BE REWARDED FOR BEING LOYAL</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="sign_up">Sign up</string>
    <string name="existing_user_sign_in">Redeemar user? Sign in</string>
    <string name="retype_password">Retype password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update Profile</string>
</resources>