<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <!-- Header aligned to top -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_no_text"
            android:maxHeight="@dimen/medium_logo_height"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"></ImageView>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/header">


        <!--  First Name Text -->
        <EditText
            android:id="@+id/first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/first_name"
            android:background="@drawable/textfield_bg"
            android:textSize="14sp"
            android:gravity="left"
            android:padding="@dimen/button_padding_med"
            android:singleLine="true"/>


        <!--  Last Name Text -->
        <EditText
            android:id="@+id/last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/last_name"
            android:background="@drawable/textfield_bg"
            android:textSize="14sp"
            android:gravity="left"
            android:padding="@dimen/button_padding_med"
            android:singleLine="true"/>

        <!--  Email Text -->
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email_address"
            android:background="@drawable/textfield_bg"
            android:textSize="14sp"
            android:gravity="left"
            android:padding="@dimen/button_padding_med"
            android:singleLine="true"/>

        <!--  Phone Text -->
        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/phone"
            android:background="@drawable/textfield_bg"
            android:textSize="14sp"
            android:gravity="left"
            android:padding="@dimen/button_padding_med"
            android:singleLine="true"/>

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="@dimen/button_title_large"
            android:background="@drawable/button_green"
            android:padding="@dimen/button_padding_med"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/update_profile"
            android:textColor="@color/white" />

    </LinearLayout>



</RelativeLayout>