<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="@dimen/baseline_padding">

    <!-- Header aligned to top -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_no_text"
            android:maxHeight="@dimen/medium_logo_height"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:paddingBottom="10dp"
            android:contentDescription="@string/splash_screen_description"></ImageView>

    </RelativeLayout>

    <!-- Footer aligned to bottom -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="@dimen/menu_title_med"
            android:paddingTop="@dimen/button_padding_med"
            android:paddingBottom="@dimen/button_padding_med"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:layout_margin="@dimen/activity_vertical_margin_small"
            android:background="@drawable/button_green"
            android:textColor="@color/white"
            android:text="@string/continue_to_browse" />


        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="@dimen/menu_title_med"
            android:paddingTop="@dimen/button_padding_med"
            android:paddingBottom="@dimen/button_padding_med"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:layout_margin="@dimen/activity_vertical_margin_small"
            android:background="@drawable/button_green"
            android:textColor="@color/white"
            android:text="@string/scan_again" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvSuccessMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/failed"
            android:textColor="@color/deep_red"
            android:layout_below="@+id/brand_logo_image"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvErrorCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/INIT_ERROR"
            android:textColor="@color/deep_red"
            android:textSize="12sp"
            android:layout_below="@+id/tvSuccessMessage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>


        <ImageView
            android:id="@+id/failed"
            android:src="@drawable/ic_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvErrorCode"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:paddingBottom="15dp"
            android:contentDescription="@string/splash_screen_description" />



    </LinearLayout>


</RelativeLayout>